# helloFlask

./: Dockerfile  README.md  pyproject.toml  requirements.txt
helloflask/: database.db  flask_app.py  init_db.py  this_is_my_soft.py
helloflask/static/css/: styles.css
helloflask/templates/: base.html  index.html  page_avec_image.html
