[tool.poetry]
name = "helloflask"
version = "0.1.0"
description = ""
authors = ["RomanRutka <roman.rutka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


